<resources>
    <string name="app_name">FintessFactoryNicosia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_us">About Us</string>
    <string name="login">login</string>
    <string name="todo">TODO</string>
    <string name="btoomo">TODO</string>
    <string name="classes" />
    <string name="classes1">classes</string>
    <string name="test">test</string>
</resources>
