<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/black_chalk_back"
    >


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_above="@id/login"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ff_logo_transparent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="356dp"
        android:layout_below="@id/classes"
        android:layout_alignBaseline="@id/classes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-102dp"
        android:contentDescription="@string/btoomo"
        android:paddingTop="70dp"
        app:srcCompat="@drawable/bottom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="319dp"
        android:layout_height="83dp"
        android:layout_above="@id/about"
        android:layout_centerInParent="true"
        android:background="@drawable/my_button"
        android:fontFamily="@font/syncopate"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:text="Login" />

    <Button
        android:id="@+id/about"
        android:layout_width="319dp"
        android:layout_height="83dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/my_button"
        android:fontFamily="@font/syncopate"
        android:text="@string/about_us"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="bold"
        tools:text="About Us" />

    <Button
        android:id="@+id/classes"
        android:layout_width="319dp"
        android:layout_height="83dp"
        android:layout_alignTop="@id/about"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/my_button"
        android:fontFamily="@font/syncopate"
        android:text="@string/classes1"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:addStatesFromChildren="false"
        android:background="#150A0A"
        android:paddingTop="20dp"
        android:visibility="invisible"
        tools:visibility="invisible">

    </WebView>

</RelativeLayout>